Implement until calendar section

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -16,13 +16,72 @@
   </div>
 </div>
 
-
 <div class="light-container">
   <div class="description-container">
-  <span class="school-description">
-    Бесплатная школа подготовки к ЦТ по <span class="accent">физике</span> и <span class="accent">математике</span> для
-    поступающих на <span class="extra-bold">факультет РФИКТ</span> по специальностям <span class="extra-bold">физическая
-    электроника</span> и <span class="extra-bold">радиофизика</span>.
-  </span>
+    <span class="school-description">
+      Бесплатная школа подготовки к ЦТ по <span class="accent">физике</span> и <span class="accent">математике</span> для
+      поступающих на <span class="extra-bold">факультет РФИКТ</span> по специальностям <span class="extra-bold">физическая
+      электроника</span> и <span class="extra-bold">радиофизика</span>.
+    </span>
+    <div class="detailed-description-container">
+      <img src="assets/img/writing.png">
+      <span class="detailed-description">
+        Школа организована <span class="accent extra-bold">ведущей кафедрой</span>
+        факультета радиофизики и компьютерных
+        технологий - <span class="accent extra-bold">кафедрой физической
+        электроники и нанотехнологий БГУ</span> для
+        самых талантливых и умных абитуриентов,
+        мечтающих о творческой
+        научно-исследовательской деятельности,
+        профессиональном программировании,
+        изобретательной электронике и
+        самореализации.
+      </span>
+    </div>
+  </div>
+</div>
+
+<div class="dark-container">
+  <div class="discord-container">
+    <div class="discord-instructions">
+      <span>
+        Занятия проходят удалённо в программе <span class="main extra-bold">Discord</span><br>
+        (необходимо установить на телефон и/или компьютер)
+      </span>
+      <img src="assets/img/phone.svg">
+    </div>
+    <div class="discord-details">
+      <div class="challenges-description">
+        В чат занятий можно отправлять любые задачи:<br>
+        непонятные, пугающие, сложные. Будем вместе разбирать!
+      </div>
+      <img src="assets/img/wave_black.svg">
+    </div>
+  </div>
+</div>
+
+<div class="dark-container">
+  <div class="schedule-container">
+    <h2>Расписание</h2>
+    <div class="schedule-details">
+      <h3>Суббота</h3>
+      <div class="session-details">
+        <span>19:00</span>
+        <div class="session-type main-color-border">математика</div>
+      </div>
+      <div class="session-details">
+        <span>20:00</span>
+        <div class="session-type accent-color-border">физика</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="dark-container">
+  <div class="calendar-container">
+    <div class="past-sessions-button"></div>
+    <!--<ng-container *ngFor="let session of calendar">
+      <div>{{ formatDate(session.date) }}</div>
+    </ng-container>-->
   </div>
 </div>
