--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,1 +1,4 @@
 $contentWidth: 1230px;
+
+$mainColorFilter: invert(80%) sepia(35%) saturate(6573%) hue-rotate(93deg) brightness(101%) contrast(104%);
+$whiteColorFilter: invert(100%) sepia(3%) saturate(12%) hue-rotate(70deg) brightness(104%) contrast(101%);
