--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -75,11 +75,116 @@
     display: flex;
     flex-direction: column;
     color: colors.$darkColor;
+    margin: 120px 0;
 
     &>.school-description {
-      margin: 60px 0;
+      margin-bottom: 60px;
       font-size: 30px;
       font-weight: 700;
+    }
+
+    &>.detailed-description-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      &>.detailed-description {
+        width: 780px;
+        height: fit-content;
+        font-size: 30px;
+        font-weight: 700;
+      }
+
+      &>img {
+        width: 344px;
+        height: 561px;
+      }
+    }
+  }
+
+  .discord-container {
+    margin-top: 120px;
+    margin-bottom: 80px;
+    width: variables.$contentWidth;
+    display: flex;
+    flex-direction: column;
+    gap: 120px;
+    color: colors.$lightColor;
+
+    &>.discord-instructions {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: center;
+
+      &>span {
+        font-size: 30px;
+        font-weight: 700;
+        width: fit-content;
+      }
+    }
+
+    &>.discord-details {
+      display: flex;
+      flex-direction: column;
+      gap: 100px;
+
+      &>.challenges-description {
+        display: flex;
+        justify-content: center;
+        font-size: 30px;
+        font-weight: 700;
+        border: 2px solid colors.$accentColor;
+        padding: 30px;
+      }
+
+      &>img {
+        filter: variables.$mainColorFilter;
+      }
+    }
+  }
+
+  .schedule-container {
+    width: variables.$contentWidth;
+    display: flex;
+    flex-direction: column;
+    color: colors.$lightColor;
+
+    &>h2 {
+      margin: 0;
+      font-size: 60px;
+      font-weight: 800;
+    }
+
+    &>.schedule-details {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+
+      &>h3 {
+        font-size: 32px;
+        font-weight: 800;
+        margin-bottom: 10px;
+      }
+
+      &>.session-details {
+        display: flex;
+        gap: 10px;
+        font-size: 30px;
+        font-weight: 600;
+
+        &>span {
+          width: 100px;
+        }
+
+        &>.session-type {
+          border: 1px solid;
+          border-radius: 8px;
+          width: 220px;
+          text-align: center;
+        }
+      }
     }
   }
 
@@ -103,7 +208,19 @@
     color: colors.$accentColor;
   }
 
+  span>.main {
+    color: colors.$mainColor;
+  }
+
   span>.extra-bold {
     font-weight: 800;
+  }
+
+  .main-color-border {
+    border-color: colors.$mainColor !important;
+  }
+
+  .accent-color-border {
+    border-color: colors.$accentColor !important;
   }
 }
