--- a/src/app/components/rfe-navbar/rfe-navbar.component.html
+++ b/src/app/components/rfe-navbar/rfe-navbar.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-  <a>Расписание</a>
-  <a class="accent-link">Присоединиться</a>
+  <a href="#timetable">Расписание</a>
+  <a class="accent-link" href="#registration">Присоединиться</a>
 </div>
