--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -150,6 +150,7 @@
     display: flex;
     flex-direction: column;
     color: colors.$lightColor;
+    margin-bottom: 80px;
 
     &>h2 {
       margin: 0;
@@ -188,6 +189,155 @@
     }
   }
 
+  .calendar-container {
+    width: variables.$contentWidth;
+    display: flex;
+    flex-direction: column;
+    color: colors.$lightColor;
+    gap: 40px;
+    margin: 40px 0;
+
+    .sessions-button {
+      width: 250px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+      padding: 8px;
+      font-size: 30px;
+      font-weight: 700;
+      border: 2px solid colors.$lightColor;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    &>h2 {
+      margin: 0;
+      font-size: 60px;
+      font-weight: 800;
+    }
+
+    &>.calendar-stepper-container {
+      display: flex;
+      flex-direction: column;
+
+      &>.past-button-connecting-line {
+        width: 2px;
+        height: 80px;
+        background-color: colors.$lightColor;
+        margin-left: 20px;
+      }
+
+      &>.future-button-connecting-line {
+        width: 2px;
+        height: 20px;
+        background-color: colors.$lightColor;
+        margin-left: 20px;
+      }
+
+      .session-container {
+        display: flex;
+        flex-direction: column;
+
+        &>.session-date-step {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 220px;
+          height: 40px;
+          border: 2px solid colors.$lightColor;
+          border-radius: 20px;
+          font-size: 26px;
+          font-weight: 800;
+        }
+
+        &>.session-step {
+          display: flex;
+          flex-direction: row;
+
+          &>.session-line {
+            margin-left: 20px;
+            width: 2px;
+            background-color: colors.$lightColor;
+          }
+
+          &>.session-content {
+            display: flex;
+            flex-direction: column;
+            margin: 30px;
+            gap: 12px;
+
+            &>.session-details {
+              display: flex;
+              flex-direction: row;
+              justify-content: space-between;
+              align-items: center;
+              width: 700px;
+
+              &>.title {
+                border: 2px solid;
+                border-radius: 10px;
+                font-size: 30px;
+                font-weight: 700;
+                width: 450px;
+                padding: 2px 8px;
+                text-align: center;
+              }
+
+              &>span {
+                font-size: 30px;
+                font-weight: 700;
+                width: 200px;
+              }
+            }
+
+            &>.session-math>.title {
+              border-color: colors.$mainColor;
+            }
+
+            &>.session-physics>.title {
+              border-color: colors.$accentColor;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .registration-container {
+    width: variables.$contentWidth;
+    display: flex;
+    flex-direction: column;
+    color: colors.$lightColor;
+    gap: 70px;
+    margin: 50px 0;
+    padding-bottom: 400px;
+
+    &>h2 {
+      margin: 0;
+      font-size: 60px;
+      font-weight: 800;
+    }
+
+    &>.registration-content {
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+
+      &>span {
+        font-size: 30px;
+        font-weight: 700;
+      }
+    }
+
+    &>span {
+      font-size: 30px;
+      font-weight: 700;
+    }
+  }
+
   .join-link {
     display: block;
     width: fit-content;
@@ -197,6 +347,7 @@
     padding: 20px 40px;
     background-color: colors.$accentColor;
     border-radius: 8px;
+    text-decoration: none;
 
     &:hover {
       cursor: pointer;
@@ -222,5 +373,9 @@
 
   .accent-color-border {
     border-color: colors.$accentColor !important;
+  }
+
+  .rotate180 {
+    transform: rotate(180deg);
   }
 }
