--- a/Frontend/src/app/components/tasks/math/2015/a1/a1_2015.component.html
+++ b/Frontend/src/app/components/tasks/math/2015/a1/a1_2015.component.html
@@ -13,3 +13,9 @@
     </ng-container>
   </div>
 </div>
+
+<ng-container *ngIf="mode === TaskComponentMode.Edit">
+  <form [formGroup]="">
+    <input type="number">
+  </form>
+</ng-container>
