--- a/Frontend/src/app/pages/centralized-testing/task-page/task-page.component.scss
+++ b/Frontend/src/app/pages/centralized-testing/task-page/task-page.component.scss
@@ -1,5 +1,8 @@
 @use '~src/colors';
 
 :host {
-  background-color: colors.$darkColor;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
