--- a/Frontend/src/app/components/rfe-navbar/rfe-navbar.component.html
+++ b/Frontend/src/app/components/rfe-navbar/rfe-navbar.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <a href="/testing">Тестирование</a>
   <a href="#timetable">Расписание</a>
   <a class="accent-link" href="#registration">Присоединиться</a>
 </div>
