--- a/Frontend/src/app/pages/centralized-testing/welcome-page/welcome-page.component.html
+++ b/Frontend/src/app/pages/centralized-testing/welcome-page/welcome-page.component.html
@@ -1,1 +1,11 @@
-<p>welcome-page works!</p>
+<div class="main-container">
+  <h1>Добро пожаловать на тренировочное тестирование!</h1>
+  <p>В данном разделе вы можете потренироваться решать типовые задачи по физике и математике.</p>
+  <p>Тестирование сформировано, учитывая особенности Факультета радиофизики и компьютерных технологий, а именно:</p>
+  <ul>
+    <li>Для обозначения математических операций используются аналоги из программирования (квадратный корень - sqrt(x), степень - pow(x, n) и другие)</li>
+    <li>Существует несколько режимов прохождения теста: лёгкий, классический, скоростной и студент</li>
+  </ul>
+
+  <button routerLink="../init">Начать тестирование</button>
+</div>
