--- a/Frontend/src/app/components/tasks/math/2015/a1/a1_2015.component.scss
+++ b/Frontend/src/app/components/tasks/math/2015/a1/a1_2015.component.scss
@@ -1,49 +1,49 @@
 @use '~src/colors';
 
 :host {
-  display: block;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 100px;
+  align-items: center;
 
-  .coordinate-line-container {
-    height: 40px;
+  button {
+    padding: 4px;
+    font-size: 14px;
+    font-weight: 700;
+    border-radius: 8px;
+    color: colors.$lightColor;
+    text-decoration: none;
+    background-color: colors.$accentColor;
+    cursor: pointer;
+  }
+
+  h2 {
+    color: colors.$lightColor;
+  }
+
+  form {
+    max-width: 600px;
+    margin-bottom: 200px;
+
+    textarea {
+      width: 600px;
+      height: 300px;
+      resize: none;
+    }
+
+    .answers {
+      p {
+        color: colors.$lightColor;
+      }
+
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+  }
+
+  .apply-json-form {
     display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-
-    .line-container {
-      display: flex;
-      align-items: center;
-      gap: -10px;
-
-      .line {
-        width: 460px;
-        height: 2px;
-        background-color: colors.$accentColor;
-      }
-    }
-
-    .strokes-container {
-      position: relative;
-      top: -35px;
-      display: flex;
-
-      .stroke-item-container {
-        color: colors.$mainColor;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 3px;
-
-        &>div {
-          min-height: 11px;
-        }
-
-        .stroke {
-          height: 11px;
-          width: 2px;
-          background-color: colors.$lightColor;
-        }
-      }
-    }
   }
 }
