--- a/Frontend/src/app/components/tasks/shared/rfe-answers/rfe-task-play.component.html
+++ b/Frontend/src/app/components/tasks/shared/rfe-answers/rfe-task-play.component.html
@@ -8,7 +8,7 @@
   <ng-template #imageAnswers>
     <ng-container *ngFor="let answer of answers; let i = index">
       <p>{{ i + 1 + ')' }}</p>
-      <img [src]="'assets/img/A4_2015/' + answer">
+      <img [src]="'assets/img/tasks/' + answer">
     </ng-container>
   </ng-template>
 </div>
