--- a/Frontend/src/app/pages/centralized-testing/task-page/task-page.component.html
+++ b/Frontend/src/app/pages/centralized-testing/task-page/task-page.component.html
@@ -1,13 +1,5 @@
-<a1_2015 [mode]="TaskComponentMode.Play"></a1_2015>
-<rfe-text-task [mode]="TaskComponentMode.Play" [identity]="identityA2"></rfe-text-task>
-<rfe-text-task [mode]="TaskComponentMode.Play" [identity]="identityA3"></rfe-text-task>
-<a4_2015 [mode]="TaskComponentMode.Play"></a4_2015>
-<rfe-text-task [mode]="TaskComponentMode.Play" [identity]="identityA5"></rfe-text-task>
-<!--TODO: Task 6-->
-<rfe-text-task [mode]="TaskComponentMode.Play" [identity]="identityA7"></rfe-text-task>
-<rfe-text-task [mode]="TaskComponentMode.Play" [identity]="identityA8"></rfe-text-task>
-<rfe-text-task [mode]="TaskComponentMode.Play" [identity]="identityA9"></rfe-text-task>
-<rfe-text-task [mode]="TaskComponentMode.Play" [identity]="identityA10"></rfe-text-task>
-<!--TODO: Task 11-->
-<!--TODO: Task 12-->
-<rfe-text-task [mode]="TaskComponentMode.Play" [identity]="identityA13"></rfe-text-task>
+<ng-container [ngSwitch]="taskId">
+  <a1_2015 *ngSwitchCase="'A1'" [mode]="TaskComponentMode.Play" [id]="taskId" [catalog]="taskCatalog" [seed]="taskSeed"></a1_2015>
+  <a4_2015 *ngSwitchCase="'A4'" [mode]="TaskComponentMode.Play" [id]="taskId" [catalog]="taskCatalog" [seed]="taskSeed"></a4_2015>
+  <rfe-text-task *ngSwitchDefault [mode]="TaskComponentMode.Play" [id]="taskId" [catalog]="taskCatalog" [seed]="taskSeed"></rfe-text-task>
+</ng-container>
