--- a/Frontend/src/app/pages/centralized-testing/testing-flow/testing-flow.component.scss
+++ b/Frontend/src/app/pages/centralized-testing/testing-flow/testing-flow.component.scss
@@ -1,4 +1,5 @@
 @use '~src/colors';
+@use 'sass:math';
 
 :host {
   display: flex;
@@ -26,22 +27,50 @@
 
       .task-item-container {
         cursor: pointer;
+
+        &.visited {
+          cursor: default;
+
+          &>.task-item {
+            background-color: colors.$mainColor;
+          }
+        }
       }
 
       .task-item {
         height: 6px;
         background-color: colors.$lightColor;
         text-align: center;
-
-        &.visited {
-          background-color: colors.$mainColor;
-        }
       }
 
       .task-title {
         margin-top: 6px;
         text-align: center;
       }
+    }
+  }
+
+  $answersSheetButtonWidth: 320px;
+  $answersSheetButtonHeight: 50px;
+
+  .answers-sheet-button {
+    position: fixed;
+    left: math.div(($answersSheetButtonHeight - $answersSheetButtonWidth), 2);
+    top: 50%;
+    height: $answersSheetButtonHeight;
+    width: $answersSheetButtonWidth;
+
+    cursor: pointer;
+    padding: 8px;
+    font-size: 22px;
+    font-weight: 800;
+    background-color: colors.$mainColor;
+    border: none;
+    border-radius: 12px 12px 0 0;
+    transform: rotate(90deg);
+
+    &:hover {
+      opacity: 0.9;
     }
   }
 }
