--- a/Frontend/src/app/pages/centralized-testing/testing-flow/testing-flow.component.html
+++ b/Frontend/src/app/pages/centralized-testing/testing-flow/testing-flow.component.html
@@ -26,6 +26,6 @@
   </ng-template>
 </div>
 
-<button class="answers-sheet-button">
+<button (click)="openAnswersSheetDialog()" class="answers-sheet-button">
   Открыть бланк ответов
 </button>
