--- a/Frontend/src/app/pages/centralized-testing/task-page/task-page.component.scss
+++ b/Frontend/src/app/pages/centralized-testing/task-page/task-page.component.scss
@@ -1,10 +1,11 @@
 @use '~src/colors';
 
 :host {
-  margin-top: 200px;
+  margin-top: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 200px;
+  width: 650px;
 }
