--- a/Frontend/src/app/pages/centralized-testing/test-answer-sheet/test-answer-sheet.component.scss
+++ b/Frontend/src/app/pages/centralized-testing/test-answer-sheet/test-answer-sheet.component.scss
@@ -1,6 +1,8 @@
+@use '~src/colors';
+
 :host {
   display: block;
-  width: 900px;
+  width: 1000px;
   height: 600px;
 
   .title {
@@ -18,10 +20,27 @@
     .a-part-answers {
       display: flex;
       flex-direction: row;
-      gap: 2px;
+      gap: 4px;
 
-      span {
-        text-align: center;
+      .task-answers-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 12px;
+
+        .answer-title {
+          text-align: center;
+          font-size: 14px;
+          width: 32px;
+          border: colors.$accentColor 1px solid;
+        }
+
+        .answer-checkboxes-container {
+          display: flex;
+          flex-direction: column;
+          gap: 4px;
+        }
       }
     }
   }
